<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmationSOActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_end_constraint_layout_1"
        android:layout_marginEnd="@dimen/margin_start_end_constraint_layout_1"
        android:layout_marginTop="@dimen/margin_top_bottom_constraint_layout_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/pilih_unit"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_bottom_between_constraint_layout_2"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/pilih_ruangan"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spnSPBU2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_end_constraint_layout_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spnRuangan2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_end_constraint_layout_2"
            android:layout_marginTop="@dimen/margin_top_bottom_between_constraint_layout_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintMiddle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_end_constraint_layout_1"
        android:layout_marginEnd="@dimen/margin_start_end_constraint_layout_1"
        android:layout_marginTop="@dimen/margin_top_bottom_between_constraint_layout_1"
        android:layout_marginBottom="@dimen/margin_top_bottom_between_constraint_layout_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ConstraintTop"
        app:layout_constraintBottom_toTopOf="@id/btnProcess"
        app:layout_constraintVertical_bias="0">

        <HorizontalScrollView
            android:id="@+id/hozScrlView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <TableLayout
                    android:id="@+id/tableConfirmAsset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/buttonshape"
                    android:stretchColumns="*"
                    android:padding="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintVertical_bias="0"
                    android:visibility="visible">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="120dp"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/poppins_semibold"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/asset_id_col"
                            android:textAlignment="center"
                            android:textColor="?attr/colorOnPrimary"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="120dp"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/poppins_semibold"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/asset_name_col"
                            android:textAlignment="center"
                            android:textColor="?attr/colorOnPrimary"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="120dp"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/poppins_semibold"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/kode_unit_col"
                            android:textAlignment="center"
                            android:textColor="?attr/colorOnPrimary"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/poppins_semibold"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/kode_ruangan_col"
                            android:textAlignment="center"
                            android:textColor="?attr/colorOnPrimary"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="200dp"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/poppins_semibold"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/keterangan_col"
                            android:textAlignment="center"
                            android:textColor="?attr/colorOnPrimary"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/poppins_semibold"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/status_col"
                            android:textColor="?attr/colorOnPrimary"
                            android:textSize="14sp" />

                    </TableRow>
                </TableLayout>

                <ScrollView
                    android:id="@+id/scrollView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tableConfirmAsset"
                    android:layout_marginTop="6dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintVertical_bias="0">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerAssetConfirm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <!-- app:layout_constraintHorizontal_bias="1.0"
                           app:layout_constraintVertical_bias="0.0" -->

                </ScrollView>
            </RelativeLayout>
        </HorizontalScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnProcess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_and_confirm_data"
        android:layout_marginStart="@dimen/margin_start_end_constraint_layout_1"
        android:layout_marginEnd="@dimen/margin_start_end_constraint_layout_1"
        android:layout_marginBottom="@dimen/margin_top_bottom_constraint_layout_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:enabled="false" />

        <!--
        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        -->

</androidx.constraintlayout.widget.ConstraintLayout>