<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AllAssetActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_end_constraint_layout_1"
        android:layout_marginEnd="@dimen/margin_start_end_constraint_layout_1"
        android:layout_marginTop="@dimen/margin_top_bottom_constraint_layout_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ConstraintTop1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_bottom_constraint_layout_2"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/pilih_unit"
                android:textColor="?attr/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_bottom_between_constraint_layout_2"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/pilih_ruangan"
                android:textColor="?attr/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinnerSPBU"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_end_constraint_layout_2"
                android:layout_marginTop="@dimen/margin_top_bottom_constraint_layout_2"
                android:layout_marginEnd="@dimen/margin_start_end_constraint_layout_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinnerRuangan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_end_constraint_layout_2"
                android:layout_marginTop="@dimen/margin_top_bottom_between_constraint_layout_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_top_bottom_between_constraint_layout_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ConstraintTop1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <Button
                android:id="@+id/btnGenerate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/show_data"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <HorizontalScrollView
        android:id="@+id/hzScrlView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/margin_top_bottom_between_constraint_layout_1"
        android:layout_marginBottom="@dimen/margin_top_bottom_constraint_layout_1"
        android:layout_marginStart="@dimen/margin_start_end_constraint_layout_1"
        android:layout_marginEnd="@dimen/margin_start_end_constraint_layout_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ConstraintTop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <TableLayout
                android:id="@+id/tableAsset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonshape"
                android:stretchColumns="*"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:padding="4dp"
                android:visibility="invisible">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/poppins_semibold"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/kode_ruangan_col"
                        android:textAlignment="center"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="14sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/poppins_semibold"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/asset_id_col"
                        android:textAlignment="center"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="14sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/poppins_semibold"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/barcode_no_col"
                        android:textAlignment="center"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="14sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="180dp"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/poppins_semibold"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/asset_name_col"
                        android:textAlignment="center"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="14sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/poppins_semibold"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/tahun_perolehan_col"
                        android:textAlignment="center"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="14sp" />

                </TableRow>
            </TableLayout>

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tableAsset"
                android:layout_marginTop="6dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerAsset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <!-- app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintVertical_bias="0.0" -->

            </ScrollView>
        </RelativeLayout>
    </HorizontalScrollView>

    <!--
    <ProgressBar
        android:id="@+id/progressBar4"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
     -->

</androidx.constraintlayout.widget.ConstraintLayout>